# context-enginnering-workflow

./: README.md  app.py  pyproject.toml
config/agents/: research_agents.yaml
config/tasks/: research_tasks.yaml
outputs/: markdown_chunks.md  structured_data.json
src/config/: config_loader.py
src/document_processing/: doc_parser.py
src/generation/: generation.py
src/memory/: memory.py
src/rag/: embeddings.py  rag_pipeline.py  retriever.py
src/tools/: arxiv_tool.py  memory_tool.py  rag_tool.py  web_search_tool.py
src/workflows/: agents.py  flow.py  tasks.py
